upd: добавил метод TotalCost, для подсчета стоимости подписок, улучшил логирование, теперь у каждого модуля свой логгер с префиксом
